--- a/f1frbco42g18/index.html
+++ b/f1frbco42g18/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width: 99vw; height: 95vh;></canvas>
+      <canvas id="unity-canvas" style="width: 99vw; height: 95vh; position:fixed"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
